--- a/.github/workflows/msbuild-test.yml
+++ b/.github/workflows/msbuild-test.yml
@@ -1,7 +1,7 @@
 name: Test release build (Windows)
 
 on:
-  pull_request:
+  push:
     branches:
     - master2.x
     
@@ -45,6 +45,14 @@ jobs:
         where heat.exe
         ./build-installers.bat
       
-    - name: Check output
-      working-directory: kam1n0-builds/windows/bins/installer/
-      run: dir 
+    - name: Building Kam1n0
+      working-directory: kam1n0/
+      run: |
+        mvn -DskipTests clean package
+        mvn -DskipTests package
+    
+    - name: Running Kam1n0
+      working-directory: kam1n0/build-bins
+      run: |
+        java -jar -Xmx12G -Xss4m -Djdk.attach.allowAttachSelf=true --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED --add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED --add-exports java.rmi/sun.rmi.server=ALL-UNNAMED --add-exports java.sql/java.sql=ALL-UNNAMED --add-opens java.base/java.lang.module=ALL-UNNAMED --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED --add-opens java.base/jdk.internal.math=ALL-UNNAMED --add-opens java.base/jdk.internal.module=ALL-UNNAMED --add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED kam1n0-server.jar --start
+        
